// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Azure Linux Function App With Defaults renders an Azure Linux Function App with defaults and checks snapshot 1`] = `
"{
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_linux_function_app": {
      "testAzureLinuxFunctionApp_2B86F984": {
        "app_settings": {
          "FUNCTIONS_EXTENSION_VERSION": "~4",
          "FUNCTIONS_WORKER_RUNTIME": "node"
        },
        "location": "eastus",
        "name": "fatest",
        "resource_group_name": "\${azurerm_resource_group.testAzureLinuxFunctionApp_rg_9D21757F.name}",
        "service_plan_id": "\${azurerm_service_plan.testAzureLinuxFunctionApp_AppServicePlan_41C3FFFD.id}",
        "site_config": {
          "application_stack": {
            "node_version": "14"
          },
          "use_32_bit_worker": false
        },
        "storage_account_access_key": "\${azurerm_storage_account.testAzureLinuxFunctionApp_sa_4C0B969D.primary_access_key}",
        "storage_account_name": "\${azurerm_storage_account.testAzureLinuxFunctionApp_sa_4C0B969D.name}"
      }
    },
    "azurerm_resource_group": {
      "testAzureLinuxFunctionApp_rg_9D21757F": {
        "location": "eastus",
        "name": "rg-fatest"
      }
    },
    "azurerm_service_plan": {
      "testAzureLinuxFunctionApp_AppServicePlan_41C3FFFD": {
        "location": "eastus",
        "maximum_elastic_worker_count": 2,
        "name": "fatestasp",
        "os_type": "Linux",
        "per_site_scaling_enabled": false,
        "resource_group_name": "\${azurerm_resource_group.testAzureLinuxFunctionApp_rg_9D21757F.name}",
        "sku_name": "Y1",
        "worker_count": 1,
        "zone_balancing_enabled": false
      }
    },
    "azurerm_storage_account": {
      "testAzureLinuxFunctionApp_sa_4C0B969D": {
        "account_replication_type": "LRS",
        "account_tier": "Standard",
        "location": "eastus",
        "name": "fateststacc",
        "resource_group_name": "\${azurerm_resource_group.testAzureLinuxFunctionApp_rg_9D21757F.name}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.75.0"
      }
    }
  }
}"
`;

exports[`Linux Function App Example renders the Linux Function App and checks snapshot 1`] = `
{
  "data": {
    "azurerm_monitor_diagnostic_categories": {
      "testAzureLinuxFunctionApp_diagsettings_diagcategories_D81585AA": {
        "resource_id": "\${azurerm_linux_function_app.testAzureLinuxFunctionApp_2B86F984.id}",
      },
    },
  },
  "output": {
    "id": {
      "value": "\${azurerm_linux_function_app.testAzureLinuxFunctionApp_2B86F984.id}",
    },
  },
  "provider": {
    "azurerm": [
      {
        "features": {
          "resource_group": {
            "prevent_deletion_if_contains_resources": false,
          },
        },
      },
    ],
  },
  "resource": {
    "azurerm_linux_function_app": {
      "testAzureLinuxFunctionApp_2B86F984": {
        "app_settings": {
          "FUNCTIONS_EXTENSION_VERSION": "~4",
          "FUNCTIONS_WORKER_RUNTIME": "node",
        },
        "location": "eastus",
        "name": "fa\${var.name}",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "service_plan_id": "\${azurerm_service_plan.testAzureLinuxFunctionApp_AppServicePlan_41C3FFFD.id}",
        "site_config": {
          "application_stack": {
            "node_version": "14",
          },
          "use_32_bit_worker": false,
        },
        "storage_account_access_key": "\${azurerm_storage_account.testAzureLinuxFunctionApp_sa_4C0B969D.primary_access_key}",
        "storage_account_name": "\${azurerm_storage_account.testAzureLinuxFunctionApp_sa_4C0B969D.name}",
        "tags": {
          "test": "test",
        },
      },
    },
    "azurerm_log_analytics_workspace": {
      "log_analytics": {
        "location": "eastus",
        "name": "la-\${var.name}",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
      },
    },
    "azurerm_monitor_diagnostic_setting": {
      "testAzureLinuxFunctionApp_diagsettings_301DD045": {
        "dynamic": {
          "enabled_log": {
            "content": {
              "category": "\${enabled_log.value}",
            },
            "for_each": "\${tolist(data.azurerm_monitor_diagnostic_categories.testAzureLinuxFunctionApp_diagsettings_diagcategories_D81585AA.log_category_types)}",
          },
          "metric": {
            "content": {
              "category": "\${metric.value}",
            },
            "for_each": "\${tolist(data.azurerm_monitor_diagnostic_categories.testAzureLinuxFunctionApp_diagsettings_diagcategories_D81585AA.metrics)}",
          },
        },
        "log_analytics_workspace_id": "\${azurerm_log_analytics_workspace.log_analytics.id}",
        "name": "diagsettings",
        "target_resource_id": "\${azurerm_linux_function_app.testAzureLinuxFunctionApp_2B86F984.id}",
      },
    },
    "azurerm_resource_group": {
      "rg": {
        "location": "eastus",
        "name": "rg-\${var.name}",
        "tags": {
          "test": "test",
        },
      },
    },
    "azurerm_service_plan": {
      "testAzureLinuxFunctionApp_AppServicePlan_41C3FFFD": {
        "location": "eastus",
        "maximum_elastic_worker_count": 2,
        "name": "fa\${var.name}asp",
        "os_type": "Linux",
        "per_site_scaling_enabled": false,
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "sku_name": "Y1",
        "tags": {
          "test": "test",
        },
        "worker_count": 1,
        "zone_balancing_enabled": false,
      },
    },
    "azurerm_storage_account": {
      "testAzureLinuxFunctionApp_sa_4C0B969D": {
        "account_replication_type": "LRS",
        "account_tier": "Standard",
        "location": "eastus",
        "name": "fa\${var.name}stacc",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "tags": {
          "test": "test",
        },
      },
    },
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.75.0",
      },
    },
  },
  "variable": {
    "name": {
      "default": "test",
      "description": "System name used to randomize the resources",
      "type": "string",
    },
  },
}
`;
